Refactor magnin test. Get proxy Connection.