@@ -1,10 +1,14 @@
 package ru.job4j.jdbc.magnit;
 
-import org.junit.Before;
 import org.junit.Test;
+import ru.job4j.jdbc.ConnectionRollback;
 
-import java.util.Arrays;
+import java.io.InputStream;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.SQLException;
 import java.util.List;
+import java.util.Properties;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
@@ -17,18 +21,32 @@ import static org.hamcrest.core.Is.is;
  */
 public class ConfigTest {
 
-    private Config config = new Config();
-
-    @Before
-    public void setUp() {
-        config.generate(5);
+    public Connection init() {
+        try (InputStream in = Config.class.getClassLoader().getResourceAsStream("app_magnit.properties")) {
+            Properties config = new Properties();
+            config.load(in);
+            Class.forName(config.getProperty("driver-class-name"));
+            return DriverManager.getConnection(
+                    config.getProperty("url")
+            );
+        } catch (Exception e) {
+            throw new IllegalStateException(e);
+        }
     }
 
     @Test
     public void whenSelectDataThenGetListFields() {
-        List<XmlUsage.Field> fields = Arrays.asList(new XmlUsage.Field(1), new XmlUsage.Field(2), new XmlUsage.Field(3),
-                new XmlUsage.Field(4), new XmlUsage.Field(5));
-        assertThat(fields, is(config.selectData()));
+        try (Config config = new Config(ConnectionRollback.create(this.init()))) {
+            config.generate(5);
+            List<XmlUsage.Field> fields = List.of(new XmlUsage.Field(1),
+                    new XmlUsage.Field(2), new XmlUsage.Field(3),
+                    new XmlUsage.Field(4), new XmlUsage.Field(5));
+            assertThat(fields, is(config.selectData()));
+        } catch (SQLException e) {
+            e.printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
 }
