@@ -2,12 +2,15 @@ package ru.job4j.jdbc.magnit;
 
 import org.junit.Before;
 import org.junit.Test;
+import ru.job4j.jdbc.ConnectionRollback;
 
-import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.sql.Connection;
+import java.sql.DriverManager;
 import java.util.List;
+import java.util.Properties;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
@@ -20,21 +23,37 @@ import static org.hamcrest.core.Is.is;
  */
 public class XmlUsageTest {
 
-    private Config config = new Config();
     private XmlUsage usage = new XmlUsage();
     private List<XmlUsage.Field> fields;
 
+    public Connection init() {
+        try (InputStream in = Config.class.getClassLoader().getResourceAsStream("app_magnit.properties")) {
+            Properties config = new Properties();
+            config.load(in);
+            Class.forName(config.getProperty("driver-class-name"));
+            return DriverManager.getConnection(
+                    config.getProperty("url")
+            );
+        } catch (Exception e) {
+            throw new IllegalStateException(e);
+        }
+    }
+
     @Before
     public void setUp() {
-        config.generate(5);
-        fields = Arrays.asList(new XmlUsage.Field(1), new XmlUsage.Field(2), new XmlUsage.Field(3),
+        fields = List.of(new XmlUsage.Field(1), new XmlUsage.Field(2), new XmlUsage.Field(3),
                 new XmlUsage.Field(4), new XmlUsage.Field(5));
     }
 
     @Test
-    public void whenUseXmlParser() throws IOException {
-        usage.createXml(config.selectData(), "fieldsTest.xml");
-        assertThat(Files.readAllLines(Paths.get("fieldsTest.xml")), is(Files.readAllLines(Paths.get("fields.xml"))));
+    public void whenUseXmlParser() {
+        try (Config config = new Config(ConnectionRollback.create(this.init()))) {
+            config.generate(5);
+            usage.createXml(config.selectData(), "fieldsTest.xml");
+            assertThat(Files.readAllLines(Paths.get("fieldsTest.xml")), is(Files.readAllLines(Paths.get("fields.xml"))));
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
     @Test
